# erfa-cffi

./: .gitignore  .gitmodules  README.md  erfa_wrapper.py  pyproject.toml  setup.cfg  setup.py
src/_cffi_build/: build_wrapper.py
src/erfa_cffi/: __init__.py  api.py  fast.py
tests/: test_erfa_cffi.py
