[metadata]
name = erfa-cffi
author = Juan Luis Cano Rodríguez
author_email = hello@juanlu.space
description = ERFA CFFI wrappers
long_description = file: README.md
license = MIT
url = https://github.com/astrojuanlu/erfa-cffi
version = attr: erfa_cffi.__version__

[options]
install_requires =
    cffi>=1.0
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
where = src
exclude =
    _cffi_build
    _cffi_build.*
